# Minimum CMakeModules required
cmake_minimum_required(VERSION 3.0.0)

project(WebTrafficAnnotator VERSION 1.0.0)

# Here I want to cmake all the subdirs as each one of them are separate projects.
# But it has time...

#add_subdirectory(ProtobufMessages)
#add_subdirectory(InterfaceMonitor)
#add_subdirectory(HttpIpJoiner)